--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,11 @@
   height:100%;
   font-family: sans-serif;
 }
+.nav{
+  height: 20px;
+  background-color: white;
+  
+}
 .landing{
   border: 1px solid black;
   width: 100vw;
@@ -20,20 +25,13 @@
   font-family: sans-serif;
   font-size: 30px;
   color:white;
-  /* text-shadow: -1.5px 0 #26547C, 0 1.5px #26547C, 1.5px 0 #26547C, 0 -1.5px #26547C; */
 }
 
-.aboutImg{
-  /* margin-top: 10%; */
- 
+.aboutImg{ 
   width: 50%;
 }
 .aboutImg img {
   width:600px;
-  /* height:auto;
-  border-radius: 50%;
-  border: solid white 3px; */
-  
 }
 
 .aboutSection{
@@ -56,7 +54,9 @@ border: black solid 2px;
 #skyline{
   width: 100vw;
   height:auto;
-  margin-bottom:0%;
+  bottom:0;
+  left: 0;
+  position: absolute;
   /* align-items: flex-end; */
 }
 
@@ -94,11 +94,12 @@ border: black solid 2px;
   grid-template-columns: repeat(2, 1fr); */
   /* background-color:  white; */
   background-color: #4169e1;
+  /* background-color: #010186; */
   height: 95vh;
 }
 
 .contactText{
-  color:black;
+  color:#08090B;
   font-size: 25px;
 }
 
