--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,21 @@
-.App, body {
+html, body {
+  font-family: 'Poppins', sans-serif;
   text-align: center;
   height:100%;
-  font-family: sans-serif;
-}
-.nav{
-  height: 20px;
-  background-color: white;
-  
 }
 .landing{
-  border: 1px solid black;
+  padding-top:5%;
   width: 100vw;
-  height: 100vh;
-  background-color: #4169e1;
+  height: 90vh;
+  background-color: #191970;
 }
+
+#greeting{
+  margin-top:10%;
+  font-size: 6em;
+  color:white;
+}
+
 .icon{
   width: auto;
   height: 200px;
@@ -22,33 +24,34 @@
   color:white;
 }
 .suzette{
-  font-family: sans-serif;
   font-size: 30px;
   color:white;
 }
 
 .aboutImg{ 
-  width: 50%;
+  width: 60%;
 }
-.aboutImg img {
-  width:600px;
-}
+
 
 .aboutSection{
-  /* display: flex;
-  flex-wrap:wrap; */
-  text-align: center;
-/* display:flex;
-flex-direction: row; */
+display: grid;
+grid-template-columns: 1fr 1fr;
+text-align: center;
 height: 100vh;
 color:black;
-border: black solid 2px;
+margin:0;
 } 
-
-
 .aboutTxt {
+  grid-column-start: 1;
+  grid-column-end: 2;
   text-align: center;
-  width: 50%;
+  height:100vh;
+}
+
+.aboutImg{
+  grid-column-start: 2;
+  grid-column-end: 3;
+  width:600px;
 }
 
 #skyline{
@@ -57,23 +60,24 @@ border: black solid 2px;
   bottom:0;
   left: 0;
   position: absolute;
-  /* align-items: flex-end; */
+  -webkit-filter: drop-shadow(1px 1px 0 white)
+                  drop-shadow(-1px -1px 0 white);
+  filter: drop-shadow(1px 1px 0 white) 
+          drop-shadow(-1px -1px 0 white);
 }
 
 .projectsSection{
-  border:1px purple solid;
   margin:0;
   height: 100vh;
-
 }
+
 .skillsSection {
   display:grid;
   grid-template-columns: 1fr 1fr;
   height: 100vh;
 }
-
 .skillsText{
-  background-color: rgb(169, 167, 167);
+  background-color: #4169e1;
   height: 100vh;
 }
 .skillsIcon{
@@ -89,17 +93,15 @@ border: black solid 2px;
 
 
 .contactSection{
-  border: 1px black solid;
-  /* display: grid;
-  grid-template-columns: repeat(2, 1fr); */
+  display: grid;
+  grid-template-rows:30% 70%;
   /* background-color:  white; */
-  background-color: #4169e1;
-  /* background-color: #010186; */
+  background-color: #191970;
   height: 95vh;
 }
 
 .contactText{
-  color:#08090B;
+  color:#ffffff;
   font-size: 25px;
 }
 
