--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,25 @@
 html, body {
-  font-family: 'Poppins', sans-serif;
+  /* font-family: 'Poppins', sans-serif; */
+  font-family: 'Judson', serif;
   text-align: center;
   height:100%;
 }
 .landing{
-  padding-top:5%;
+  /* padding-top:5%; */
   width: 100vw;
   height: 90vh;
-  background-color: #FADA5E;
+  /* background-color: #FADA5E; */
 }
 
 #greeting{
   margin-top:10%;
   font-size: 6em;
-  color:white;
+  /* color:white; */
 }
 
 .icon{
   width: auto;
-  height: 200px;
+  height: 100px;
 }
 .intro{
   color:white;
@@ -34,8 +35,8 @@ html, body {
 
 
 .aboutSection{
-display: grid;
-grid-template-columns: 1fr 1fr;
+/* display: grid;
+grid-template-columns: 1fr 1fr; */
 text-align: center;
 height: 100vh;
 color:black;
@@ -72,24 +73,18 @@ margin:0;
 }
 
 .skillsSection {
-  display:grid;
-  grid-template-columns: 1fr 1fr;
   height: 100vh;
 }
-.skillsText{
-  background-color: #eb9605;
-  height: 100vh;
-}
+
 .skillsIcon{
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   align-items: center;
   padding-left: 40px;
 }
 .skill{
-  width: 60%;
+  width: 30%;
 }
-
 
 
 .contactSection{
@@ -105,10 +100,7 @@ margin:0;
   font-size: 25px;
 }
 
-.formholder{
-  width: 60vw;
-  height: 60vh;
-}
+
 .footer{
   display: flex;
   justify-content: space-between; 
