--- a/src/App.css
+++ b/src/App.css
@@ -8,51 +8,17 @@ html, body {
   /* padding-top:5%; */
   width: 100vw;
   height: 90vh;
-  /* background-color: #FADA5E; */
 }
 
 #greeting{
   margin-top:10%;
-  font-size: 6em;
-  /* color:white; */
+  font-size: 8em;
+  text-decoration: underline;
+  text-decoration-color: #EB9605;
 }
-
 .icon{
   width: auto;
   height: 100px;
-}
-.intro{
-  color:white;
-}
-.suzette{
-  font-size: 30px;
-  color:white;
-}
-
-.aboutImg{ 
-  width: 60%;
-}
-
-
-.aboutSection{
-/* display: grid;
-grid-template-columns: 1fr 1fr; */
-text-align: center;
-height: 100vh;
-color:black;
-margin:0;
-} 
-.aboutTxt {
-  grid-column-start: 1;
-  grid-column-end: 2;
-  text-align: center;
-  height:100vh;
-}
-
-.aboutImg{
-  grid-column-start: 2;
-  grid-column-end: 3;
-  width:600px;
 }
 
 #skyline{
@@ -61,17 +27,50 @@ margin:0;
   bottom:0;
   left: 0;
   position: absolute;
-  -webkit-filter: drop-shadow(1px 1px 0 white)
-                  drop-shadow(-1px -1px 0 white);
-  filter: drop-shadow(1px 1px 0 white) 
-          drop-shadow(-1px -1px 0 white);
 }
 
-.projectsSection{
+.aboutSection{
+  height: 100vh;
+  margin:0;
+  } 
+
+.about-container{
+  display: grid;
+  grid-template-columns: 50% 50%;
+  text-align: center;
+}
+
+.aboutImg{ 
+  width: 60%;
+  border: 4px double #EB9605;
+  border-radius: 20%;
+}
+
+#txt{
+  margin-top:30px;
+  margin-right:100px;
+}
+
+#technologies{
+  margin-left: 0;
+}
+.projects-container{
   margin:0;
   height: 100vh;
 }
 
+.projects{
+  display:grid;
+  grid-template-columns: repeat(2, 1fr);
+  align-items: center;
+  
+}
+
+.project-card{
+  width:50vw;
+  height:40vh;
+  border:solid 1px black;
+}
 .skillsSection {
   height: 100vh;
 }
@@ -86,18 +85,28 @@ margin:0;
   width: 30%;
 }
 
-
 .contactSection{
   display: grid;
   grid-template-rows:30% 70%;
-  /* background-color:  white; */
-  background-color: #FADA5E;
   height: 95vh;
 }
 
-.contactText{
-  color:#ffffff;
-  font-size: 25px;
+input[type=text] {
+  width: 60%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+}
+
+input[type=email] {
+  width: 60%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+}
+
+.message{
+  height:100px;
 }
 
 
@@ -109,6 +118,7 @@ margin:0;
   width: 100%;
   height: 5vh;
 }
+
 #si{
   padding-left: 10px;
   height:4vh;
