--- a/src/App.css
+++ b/src/App.css
@@ -79,10 +79,11 @@ ul li{
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   justify-content: center;
+  align-content: center;
 }
 .skill{
-  justify-content: center;
   padding:5%;
+  margin:auto;
   width: 30%;
 }
 .projects-container{
