--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,11 @@ html, body {
 .nav{
 display: flex;
 justify-content: space-between;
-
+position:fixed; 
+z-index: 1;
+top:0;
+background-color: white;
+width:100vw;
 }
 
 ul{
