--- a/src/App.css
+++ b/src/App.css
@@ -224,6 +224,10 @@ h1{
   font-size: 18px;
   font-weight: bold;
 }
+.links{
+  display: flex;
+  justify-content: center;
+}
 .skills{
   display: flex;
   flex-direction: column;
