--- a/src/App.css
+++ b/src/App.css
@@ -219,7 +219,18 @@ textarea{
   padding-bottom: 4px;
 }
 
+.back-card a{
+  color: white;
+  margin:5%;
+}
 
+.back-card a:hover{
+  color:black;
+  text-decoration: underline;
+  text-decoration-color: white;
+  bottom:1px;
+  transition: all 0.5s ease-in-out 0s;
+}
 
 @media screen and (max-width: 850px) {
   body {
