--- a/src/App.css
+++ b/src/App.css
@@ -344,4 +344,17 @@ h1{
   flex-direction: column;
   width:100%;
 }
+
+.project-card{
+  position:relative;
+  width:100vw;
+  height:40vh;
+  /* margin-bottom: 1%; */
+  /* border:solid 1px black; */
+}
+
+.project-card img{
+  height:100%;
+  width: 100%;
+}
 }
