--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,7 @@ html, body {
 .icon:hover{
   fill:#EB9605;
   transition: all 0.3s ease-in-out 0s;
+  cursor: pointer;
 }
 #skyline{
   width: 100vw;
